reworked touch jumps - unresloved js math issue

--- a/dof.css
+++ b/dof.css
@@ -60,6 +60,7 @@ div.section {
 #touch-left-2 {
     left: 20%;
     width: 10%;
+    background: #5e5e5e;
 }
 
 #touch-left-3 {
@@ -81,6 +82,7 @@ div.section {
 #touch-right-2 {
     left: 70%;
     width: 10%;
+    background: #5e5e5e;
 }
 
 #touch-right {
